@@ -1,3 +1,12 @@
+2024-07-31T00:48:28Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10172036343 # 373
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-31
+* notice: last 14d: unq all: 1 1767
+* notice: prev accum: outdated-unq outdated-all / unq all: 2164 218101 / 2178 219904
+* notice: next accum: outdated-unq outdated-all / unq all: 2165 218229 / 2179 220033
+* notice: prev exec diff / last date diff / accum: unq all: +1 +129 -0 -37 / +1 +129 -0 -0 / 1 129
+* notice: removed / changed dates: [2024-07-16] / [2024-07-17 2024-07-30]
+
 2024-07-30T00:58:19Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10154258237 # 372
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-30
